[tool.poetry]
name = "learning-nlp"
version = "0.1.0"
description = ""
authors = ["Faith S.Appoh <appohfaiths@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = {extras = ["sentencepiece"], version = "^4.45.1"}
torch = "^2.4.1"
sacremoses = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
